# openprotein-docs

./: .gitignore  Dockerfile  README.md  cross-validation-page.md  dataset-page.md  dprint.json  embeddings.qmd  mise.dev.toml  mise.toml  models-page.md  mutagenesis-page.md  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: s3.yaml
apidocs/api-python/: basics.html  core_workflow.html  data.html  design.html  embedding.html  embedding_workflow.html  genindex.html  index.html  overview.html  poet.html  poet_workflow.html  predict.html  search.html  searchindex.js  train.html
prots2prot_md/: 17_intro_to_prots2prot.md  18_defining_prompts.md  19_Tools.md
source/: conf.py  index.rst
source/_templates/: layout.html  navbar-custom.html
source/getting-started/: account-page.rst  get-started-with-no-code.rst  get-started-with-our-api.rst  index.rst
source/python-api/: index.rst  installation.rst  jobs-system.ipynb  overview.rst
source/resources/: demo-datasets.rst  faq.rst  glossary.rst  index.rst  publications.rst  references.bib  tutorials-examples.rst
source/rest-api/: align.rst  authentication-and-jobs.rst  design.rst  embeddings.rst  fold.rst  index.rst  poet.rst  predictor.rst  prompt.rst  property-regression.rst
source/walkthroughs/: AMIE_substitution_deletion_analysis_poet.ipynb  Embedding_and_visualizing_antibodies.ipynb  PoET-2_inverse_folding.ipynb  PoET_api_insertion_screen_nuclear_localization.ipynb  aligning-variable.rst  antibody-engineering.rst  enzyme-engineering.rst  index.rst  multichain.rst  predicting-fitness.ipynb  quantitative-decision-making-library-design.ipynb  references-antibody.bib  references-enzymes.bib
source/web-app/: index.rst
src/: 04_p2p_chorismate_case_study.ipynb  404.html  404.qmd  _metadata.yml  _quarto.yml  account-page.md  account-page.qmd  api-authentication-and-jobs.qmd  api-embeddings.qmd  api-header.html  api-introduction.qmd  api-overview.qmd  api-poet.qmd  api-project.qmd  api-workflow.qmd  cross-validation-page.md  dataset-page.md  dataset-page.qmd  demo-datasets-page.md  demo-datasets-page.qmd  design-page.md  index.html  index.md  index.qmd  introduction-page.md  introduction-page.qmd  job-status-page.md  jupyter-notebook-exemple-page.qmd  library-page.md  mutagenesis-page.md  mutagenesis-page.qmd  poet-defining-prompts-page.md  poet-introduction-page.md  poet-tools-page.md  poet-tutorial-page.md  predictions-page.md  prots2prot-defining-prompts-page.md  prots2prot-introduction-page.md  prots2prot-tools-page.md  prots2prot-tutorial-page.md  (+5 more)
src/_site/: 04_p2p_chorismate_case_study.html  Thiolase_prots2prot.html  account-page.html  api-embeddings.html  api-introduction.html  api-poet.html  api-project.html  api-workflow.html  cross-validation-page.html  dataset-page.html  demo-datasets-page.html  design-page.html  getting-started-page copy 4.html  getting-started-page copy 6.html  index.html  search.json  (+22 more)
(+329 files in other folders)
