[project]
name = "openprotein-docs"
version = "0.0.1"
description = "Documentation for OpenProtein"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sphinx>=7.3.0,<7.4.0",
  "pydata-sphinx-theme>=0.13.0,<0.14.0",
  "recommonmark>=0.7.0,<0.8.0",
  "nbsphinx>=0.9.0,<0.10.0",
  "sphinx_markdown_tables>=0.0.17,<0.1.0",
  "sphinx_markdown_builder>=0.6.0,<0.7.0",
  "sphinx-togglebutton>=0.3.0,<0.4.0",
  "sphinx-copybutton>=0.5.0,<0.6.0",
  "sphinxcontrib-bibtex>=2.6.0,<2.7.0",
  "swagger_plugin_for_sphinx>=3.5.0,<3.6.0",
  "sphinxcontrib-httpdomain>=1.8.0,<1.9.0",
  "sphinx-new-tab-link>=0.4.0,<0.5.0",
  "sphinx-notfound-page>=1.1.0,<1.2.0",
  "sphinx-panels>=0.4.1,<0.5.0",
  # autodoc
  "openprotein-python",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.tasks]

[dependency-groups]
dev = ["sphinx-autobuild"]

[tool.pixi.environments]
dev = ["dev"]
