[project]
name = "openprotein-docs"
version = "0.1.0"
description = "Documentation for OpenProtein"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "sphinx>=7.3.0,<7.4.0",
  "pydata-sphinx-theme>=0.16.1,<0.17.0",
  "recommonmark>=0.7.0,<0.8.0",
  "nbsphinx>=0.9.0,<0.10.0",
  "sphinx_markdown_tables>=0.0.17,<0.1.0",
  "sphinx_markdown_builder>=0.6.0,<0.7.0",
  "sphinx-togglebutton>=0.3.0,<0.4.0",
  "sphinx-copybutton>=0.5.0,<0.6.0",
  "sphinxcontrib-bibtex>=2.6.0,<2.7.0",
  "swagger_plugin_for_sphinx>=3.5.0,<3.6.0",
  "sphinxcontrib-httpdomain>=1.8.0,<1.9.0",
  "sphinx-new-tab-link>=0.4.0,<0.5.0",
  "sphinx-notfound-page>=1.1.0,<1.2.0",
  "sphinx-panels>=0.4.1,<0.5.0",
  # autodoc
  "openprotein-python==0.8.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]
build = "sphinx-build source build"

[tool.pixi.feature.dev.tasks]
# install dev version of the client
dev = "sphinx-autobuild source build --port 5001"
devinstall = "pip install --no-build-isolation --no-deps --disable-pip-version-check -e ../openprotein-python-private"

[dependency-groups]
dev = [
  "sphinx-autobuild",
  # install dev version of the client
  "pip>=24.2,<25",
  "hatchling>=1.26.1",
  "hatch-vcs>=0.5.0,<1",
  "editables>=0.5,<0.6",
]

[tool.pixi.environments]
dev = ["dev"]

[tool.pixi.dependencies]
pygments = ">=2.19.2,<3"
ipython = "*"
